# Anomaly_Detection

./: .gitignore  AD.py  README.md  global_var.py  graphs.py  pyproject.toml
dati/TSB-UAD-Public/ECG/: MBA_ECG801_data.out
dati/TSB-UAD-Public/GHL/: 01_Lev_fault_Temp_corr_seed_11_vars_23.test.csv@4.out
dati/TSB-UAD-Public/IOPS/: KPI-1c6d7a26-1f1a-3321-bb4d-7a9d969ec8f0.test.out
dati/TSB-UAD-Public/KDD21/: 001_UCR_Anomaly_DISTORTED1sddb40_35000_52000_52620.out
dati/TSB-UAD-Public/NAB/: NAB_data_art0_0.out
dati/TSB-UAD-Public/OPPORTUNITY/: S1-ADL1.test.csv@16.out
dati/TSB-UAD-Public/Occupancy/: room-occupancy-0.test.csv@1.out
dati/TSB-UAD-Public/SMD/: machine-1-1.test.csv@1.out
dati/TSB-UAD-Public/SVDB/: 801.test.csv@1.out
dati/TSB-UAD-Public/SensorScope/: stb-2.test.out
dati/TSB-UAD-Public/YAHOO/: Yahoo_A1real_1_data.out
risultati/: RISULTATI.csv  RISULTATI_IFOREST.csv  RISULTATI_NoSlide.csv  RISULTATI_TEMP.csv  auc_table.tex  execution_time_table.tex  f1_table.tex  precision_table.tex  recall_table.tex
